attemptig merge of AutoHotkey.dll_N with v1.0.48.02 adding comments to changes 	modified:   source/AutoHotkey.cpp 	modified:   source/application.h 	modified:   source/script.cpp 	modified:   source/script.h 	modified:   source/var.h

--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="AutoHotkey"
+	Name="AutoHotkeyDLLl"
 	ProjectGUID="{76EFDEE3-81CF-4ADA-94DC-EA5509FF6FFC}"
 	RootNamespace="AutoHotkey"
 	Keyword="Win32Proj"
