Project Options: Allow delay unload output type: dll output name: .dll 	modified:   AutoHotkey.vcproj

--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -105,7 +105,7 @@
 			Name="Release|Win32"
 			OutputDirectory="$(ConfigurationName)"
 			IntermediateDirectory="temp\$(ConfigurationName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
 			DeleteExtensionsOnClean="*.obj;*.ilk;*.tlb;*.tli;*.tlh;*.tmp;*.rsp;*.pgc;*.pgd;*.meta"
@@ -157,7 +157,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/SAFESEH:NO /Verbose"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/AutoHotkey.exe"
+				OutputFile="$(OutDir)/AutoHotkey.dll"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="false"
@@ -172,6 +172,7 @@
 				FunctionOrder="@source/misc/function_order_for_linker_optimization.txt"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
+				SupportUnloadOfDelayLoadedDLL="true"
 				TargetMachine="1"
 			/>
 			<Tool
