new file:   source/exports.cpp

--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -407,6 +407,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\source\exports.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\source\globaldata.cpp"
 				>
 			</File>
