--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -18,11 +18,12 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
+			DeleteExtensionsOnClean="*.obj;*.ilk;*.tlb;*.tli;*.tlh;*.tmp;*.rsp;*.pgc;*.pgd;*.meta"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -42,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;SCRIPT_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -50,7 +51,7 @@
 				BufferSecurityCheck="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -65,16 +66,15 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/../Test/AutoHotkey.exe"
+				OutputFile="$(OutDir)/AutoHotkey.exe"
 				LinkIncremental="2"
-				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/AutoHotkey.pdb"
 				SubSystem="2"
 				StackReserveSize="4194304"
 				StackCommitSize="0"
 				TerminalServerAware="1"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				TargetMachine="1"
@@ -84,7 +84,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				EmbedManifest="false"
+				AdditionalManifestFiles="source\resources\AutoHotkey.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -104,11 +104,12 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
+			DeleteExtensionsOnClean="*.obj;*.ilk;*.tlb;*.tli;*.tlh;*.tmp;*.rsp;*.pgc;*.pgd;*.meta"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -131,7 +132,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;SCRIPT_DEBUG"
 				StringPooling="true"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -141,7 +142,7 @@
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
+				WarnAsError="false"
 				DebugInformationFormat="0"
 			/>
 			<Tool
@@ -159,7 +160,7 @@
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
 				OutputFile="$(OutDir)/AutoHotkey.exe"
 				LinkIncremental="1"
-				IgnoreDefaultLibraryNames="LibCMT;MSVCrt"
+				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				StackReserveSize="4194304"
@@ -168,7 +169,7 @@
 				TerminalServerAware="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				FunctionOrder="@source/misc/function_order_for_linker_optimization.txt"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -179,6 +180,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="source\resources\AutoHotkey.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -194,16 +196,17 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="upx --best --no-lzma --filter=73 --compress-icons=0 release\AutoHotkey.exe"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
 			Name="SC (self-contained)|Win32"
 			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
+			DeleteExtensionsOnClean="*.obj;*.ilk;*.tlb;*.tli;*.tlh;*.tmp;*.rsp;*.pgc;*.pgd;*.meta"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -254,7 +257,7 @@
 				ShowProgress="0"
 				OutputFile="$(OutDir)/AutoHotkeySC.bin"
 				LinkIncremental="1"
-				IgnoreDefaultLibraryNames="LibCMT;MSVCrt"
+				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				StackReserveSize="4194304"
@@ -262,8 +265,9 @@
 				TerminalServerAware="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				FunctionOrder="@source/misc/function_order_for_linker_optimization.txt"
+				SetChecksum="false"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				TargetMachine="1"
@@ -273,6 +277,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="source\resources\AutoHotkey.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -288,15 +293,17 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(ProjectDir)PostBuildSC.ahk&quot;"
 			/>
 		</Configuration>
 		<Configuration
 			Name="SC (minimum size)|Win32"
 			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
+			DeleteExtensionsOnClean="*.obj;*.ilk;*.tlb;*.tli;*.tlh;*.tmp;*.rsp;*.pgc;*.pgd;*.meta"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -357,7 +364,7 @@
 				TerminalServerAware="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				FunctionOrder="@source/misc/function_order_for_linker_optimization.txt"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -368,6 +375,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="source\resources\AutoHotkey.exe.manifest"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -383,6 +391,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="&quot;$(ProjectDir)PostBuildSC.ahk&quot;"
 			/>
 		</Configuration>
 	</Configurations>
@@ -407,7 +416,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\source\exports.cpp"
+				RelativePath=".\source\Debugger.cpp"
 				>
 			</File>
 			<File
@@ -523,6 +532,10 @@
 			</File>
 			<File
 				RelativePath=".\source\clipboard.h"
+				>
+			</File>
+			<File
+				RelativePath=".\source\Debugger.h"
 				>
 			</File>
 			<File
