--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -66,7 +66,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/AutoHotkey.exe"
+				OutputFile="$(OutDir)/../Test/AutoHotkey.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/AutoHotkey.pdb"
@@ -417,6 +417,10 @@
 			</File>
 			<File
 				RelativePath=".\source\Debugger.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\source\exports.cpp"
 				>
 			</File>
 			<File
