--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -912,6 +912,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\source\newscript.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\source\os_version.cpp"
 				>
 			</File>
