--- a/Test/.gitignore
+++ b/Test/.gitignore
@@ -18,12 +18,13 @@ temp
 *.chm
 *.fasl
 *.fas
-RAUTODLL
-RDLL
-DebugDll
 *.manifest
-AutoDll
-Debug
 *old
-Release
-
+*.lib
+*.exp
+*.ncb
+*.suo
+*.exp
+*.bin
+*.dep
+BuildLog.htm
