--- a/AutoHotkey.vcproj
+++ b/AutoHotkey.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="Test"
 			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -66,7 +66,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/../Test/AutoHotkey.exe"
+				OutputFile="$(OutDir)/AutoHotkey.exe"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="true"
@@ -105,7 +105,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="release"
 			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -159,7 +159,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/SAFESEH:NO /Verbose"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/../Test/AutoHotkey.exe"
+				OutputFile="$(OutDir)/AutoHotkey.exe"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="false"
@@ -202,7 +202,7 @@
 		</Configuration>
 		<Configuration
 			Name="SC (self-contained)|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="release"
 			IntermediateDirectory="temp\$(ConfigurationName)"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -397,7 +397,7 @@
 		</Configuration>
 		<Configuration
 			Name="DebugDll|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="Test"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -445,7 +445,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/../Test/AutoHotkey.dll"
+				OutputFile="$(OutDir)/AutoHotkey.dll"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/AutoHotkey.pdb"
@@ -569,7 +569,7 @@
 		</Configuration>
 		<Configuration
 			Name="RDLL|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="release"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
@@ -623,7 +623,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/SAFESEH:NO /Verbose"
 				AdditionalDependencies="wsock32.lib winmm.lib version.lib comctl32.lib"
-				OutputFile="$(OutDir)/../Test/AutoHotkey.dll"
+				OutputFile="$(OutDir)/AutoHotkey.dll"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="MSVCrt"
 				GenerateDebugInformation="false"
@@ -964,10 +964,6 @@
 			</File>
 			<File
 				RelativePath=".\source\ebiv.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\source\eCommands.ahk"
 				>
 			</File>
 			<File
